--- a/project.config.json
+++ b/project.config.json
@@ -1,6 +1,6 @@
 {
   "miniprogramRoot": "./dist",
-  "projectname": "ztaro",
+  "projectname": "weapp-clover",
   "description": "",
   "appid": "wx1e9bc46157ff4ecf",
   "setting": {
