--- a/package.json
+++ b/package.json
@@ -27,27 +27,27 @@
 	"author": "FaureWu <502556093@qq.com>",
 	"license": "MIT",
 	"dependencies": {
-		"@opcjs/zoro": "^2.2.2",
-		"@opcjs/zoro-plugin": "^2.1.0",
-		"@tarojs/async-await": "1.1.4",
-		"@tarojs/components": "1.1.4",
-		"@tarojs/redux": "1.1.4",
-		"@tarojs/redux-h5": "1.1.4",
-		"@tarojs/router": "1.1.4",
-		"@tarojs/taro": "1.1.4",
-		"@tarojs/taro-h5": "1.1.4",
-		"@tarojs/taro-weapp": "1.1.4",
+		"@opcjs/zoro": "^2.2.4",
+		"@opcjs/zoro-plugin": "^2.1.1",
+		"@tarojs/async-await": "^1.2.0",
+		"@tarojs/components": "^1.2.0",
+		"@tarojs/redux": "^1.2.0",
+		"@tarojs/redux-h5": "^1.2.0",
+		"@tarojs/router": "^1.2.0",
+		"@tarojs/taro": "^1.2.0",
+		"@tarojs/taro-h5": "^1.2.0",
+		"@tarojs/taro-weapp": "^1.2.0",
 		"classnames": "^2.2.6",
 		"nervjs": "^1.3.0",
 		"reselect": "^4.0.0"
 	},
 	"devDependencies": {
-		"@tarojs/cli": "^1.1.4",
-		"@tarojs/plugin-babel": "1.1.4",
-		"@tarojs/plugin-csso": "1.1.4",
-		"@tarojs/plugin-sass": "1.1.4",
-		"@tarojs/plugin-uglifyjs": "1.1.4",
-		"@tarojs/webpack-runner": "1.1.4",
+		"@tarojs/cli": "^1.2.0",
+		"@tarojs/plugin-babel": "^1.2.0",
+		"@tarojs/plugin-csso": "^1.2.0",
+		"@tarojs/plugin-sass": "^1.2.0",
+		"@tarojs/plugin-uglifyjs": "^1.2.0",
+		"@tarojs/webpack-runner": "^1.2.0",
 		"@types/react": "^16.4.8",
 		"@types/webpack-env": "^1.13.6",
 		"alioss-upload-loader": "^1.0.1",
@@ -62,11 +62,11 @@
 		"cross-env": "^5.2.0",
 		"eslint": "^4.19.1",
 		"eslint-config-prettier": "^3.1.0",
-		"eslint-config-taro": "1.1.4",
+		"eslint-config-taro": "^1.2.0",
 		"eslint-plugin-import": "^2.12.0",
 		"eslint-plugin-prettier": "^3.0.0",
 		"eslint-plugin-react": "^7.8.2",
-		"eslint-plugin-taro": "1.1.4",
+		"eslint-plugin-taro": "^1.2.0",
 		"express": "^4.16.4",
 		"faker": "^4.1.0",
 		"gulp": "^4.0.0",
@@ -79,5 +79,5 @@
 	"pre-commit": [
 		"lint"
 	],
-	"repository": "git@github.com:FaureWu/ztaro.git"
+	"repository": "git@github.com:FaureWu/weapp-clover.git"
 }
